# SAE-102

./: README.md
Sae-vote-alternatif/: entreeSecondTest  main.cpp  oracle-Second-Tour.txt  oracle-premier-tour.txt
vote-alternatif/: CMakeLists.txt  main.cpp  oracle_alternatif_1.txt  oracle_alternatif_2.txt  test_alternatif_1.txt  test_alternatif_2.txt
vote-limite/: CMakeLists.txt  main.cpp  oracle_limite_1.txt  oracle_limite_2.txt  test_limite_1.txt  test_limite_2.txt
vote-majoritaire-deux-tours/: CMakeLists.txt  main.cpp  oracle_deux_tours_1.txt  oracle_deux_tours_2.txt  test_deux_tours_1.txt  test_deux_tours_2.txt
